# claws-mail-with-gkr

./: .gitignore  README  configure.ac
po/: POTFILES.in
src/plugins/: Makefile.am
src/plugins/gnome-keyring/: Makefile.am  gkr-if.c  gkr-if.h  gnome_keyring_plugin.c
